--- a/src/app/user/register/register.component.css
+++ b/src/app/user/register/register.component.css
@@ -16,7 +16,7 @@ table.example-full-width{
     width: 100%;
 }
 .resend{
-    color: #3f51b5;
+    color: #367a0a;
     cursor: pointer;
     display: block;
     margin-bottom: 10px;
