--- a/src/app/layouts/admin-menu/admin-menu.component.html
+++ b/src/app/layouts/admin-menu/admin-menu.component.html
@@ -11,10 +11,10 @@
 </mat-expansion-panel>
 
 
-<a mat-list-item routerLink="/list-agents">Resource Centers</a>
+<!-- <a mat-list-item routerLink="/list-agents">Resource Centers</a> -->
 <!-- <a mat-list-item routerLink="/add-agent">Add Agent</a> -->
 <!-- <a mat-list-item routerLink="/list-agent-representative">List of Representative by Agents</a> -->
-<a mat-list-item routerLink="/approve-representatives">Approve TRP</a>
+<a mat-list-item routerLink="/approve-itp">Approve ITP</a>
 <!-- <a mat-list-item>Approve Transfer Request</a>
 <a mat-list-item>Approve Transaction</a> -->
 
@@ -32,7 +32,7 @@
 </mat-expansion-panel>
 
 
-<mat-expansion-panel>
+<!-- <mat-expansion-panel>
 
     <mat-expansion-panel-header>
     Bill
@@ -42,9 +42,9 @@
         <a mat-list-item routerLink="/bill-rejected">Rejected Bills</a>
         <a mat-list-item routerLink="/bill-approved">Approved Bills</a>
     </mat-nav-list>
-</mat-expansion-panel>
+</mat-expansion-panel> -->
 
-<mat-expansion-panel>
+<!-- <mat-expansion-panel>
 
     <mat-expansion-panel-header>
     Metrics
@@ -53,12 +53,12 @@
         <a mat-list-item routerLink="/list-metrics">List of Metrics</a>
         <a mat-list-item routerLink="/add-metrics">Add Metrics</a>
     </mat-nav-list>
-</mat-expansion-panel>
+</mat-expansion-panel> -->
 
 <mat-expansion-panel>
 
     <mat-expansion-panel-header>
-    Qualified TRPs
+    Qualified ITPs
     </mat-expansion-panel-header>
     <mat-nav-list>
         <a mat-list-item routerLink="/list-certificate">List of Qualified TRPs</a>
@@ -66,7 +66,7 @@
     </mat-nav-list>
 </mat-expansion-panel>
 
-<mat-expansion-panel>
+<!-- <mat-expansion-panel>
 
     <mat-expansion-panel-header>
     Transfer Request
@@ -75,6 +75,6 @@
         <a mat-list-item routerLink="/transfer-pending-trp">Pending Request-TRP</a>
         <a mat-list-item routerLink="/transfer-pending-agent">Pending Request-Resource Center</a>
     </mat-nav-list>
-</mat-expansion-panel>
+</mat-expansion-panel> -->
 <a mat-list-item routerLink="/profile">Profile</a>
 <a mat-list-item routerLink="/report-admin">Report</a>
