--- a/src/app/layouts/representative-menu/representative-menu.component.html
+++ b/src/app/layouts/representative-menu/representative-menu.component.html
@@ -1,8 +1,8 @@
 
 <a mat-list-item routerLink="/file-tax">Submit Tax Return</a>
 <a mat-list-item routerLink="/ledger-representative">Ledger</a>
-<a mat-list-item routerLink="/commission">Commission</a>
-<mat-expansion-panel>
+<!-- <a mat-list-item routerLink="/commission">Commission</a> -->
+<!-- <mat-expansion-panel>
 
     <mat-expansion-panel-header>
     Bill
@@ -13,8 +13,8 @@
         <a mat-list-item routerLink="/bill-rejected">Rejected Bills</a>
         <a mat-list-item routerLink="/bill-approved">Approved Bills</a>
     </mat-nav-list>
-</mat-expansion-panel>
+</mat-expansion-panel> -->
 <a mat-list-item routerLink="/profile">Profile</a>
-<a mat-list-item routerLink="/change-agent">Change Resource Center</a>
-<a mat-list-item routerLink="/previous-rc">Previous Resource Center</a>
+<!-- <a mat-list-item routerLink="/change-agent">Change Resource Center</a>
+<a mat-list-item routerLink="/previous-rc">Previous Resource Center</a> -->
 <a mat-list-item routerLink="/report-trp">Report</a>
