--- a/src/app/user/dashboard/dashboard.component.html
+++ b/src/app/user/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2 style="text-align: center;margin-top: 5%;">Welcome to TRP System</h2>
+    <h2 style="text-align: center;margin-top: 5%;">Welcome to ITP System</h2>
 
     <div class="chart-container" *ngIf="isAdmin || isAgent || isTrp">
         <canvas  id="MyChart" >{{ chart }}</canvas>
