--- a/src/app/trp-agent-transfer/agent/agent.component.html
+++ b/src/app/trp-agent-transfer/agent/agent.component.html
@@ -6,7 +6,7 @@
     <form class="example-form" [formGroup]="searchForm" #formDir="ngForm">
         <table class="example-full-width" cellspacing="0">
             <tr>
-                <h4 style="color: #3f51b5;text-align: center;">Please search by the TRP username</h4>
+                <h4 style="color: #3f51b5;text-align: center;">Please search by the ITP username</h4>
             </tr>
             <tr>
                 <td>
