--- a/src/app/ledger/admin-ledger/admin-ledger.component.html
+++ b/src/app/ledger/admin-ledger/admin-ledger.component.html
@@ -8,32 +8,27 @@
     </div>
     <table mat-table [dataSource]="ledgers" class="mat-elevation-z8" *ngIf="loaded">
     
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
-      
-        <!-- Position Column -->
-        <ng-container matColumnDef="taxpayerId">
-          <th mat-header-cell *matHeaderCellDef> TIN </th>
-          <td mat-cell *matCellDef="let element"> {{element.taxpayerId}} </td>
-        </ng-container>
+      <ng-container matColumnDef="serial">
+        <th mat-header-cell *matHeaderCellDef>Serial </th>
+        <td mat-cell *matCellDef="let element;let i=index;"> {{i+1}} </td>
+      </ng-container>  
+
+      <ng-container matColumnDef="taxpayerId">
+        <th mat-header-cell *matHeaderCellDef> TIN </th>
+        <td mat-cell *matCellDef="let element"> {{element.taxpayerId}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="taxpayerName">
+        <th mat-header-cell *matHeaderCellDef> Taxpayer Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.taxpayerName}} </td>
+      </ng-container>
       
         <!-- Name Column -->
-        <ng-container matColumnDef="paidAmount">
-          <th mat-header-cell *matHeaderCellDef>Amount Paid </th>
-          <td mat-cell *matCellDef="let element"> {{element.paidAmount}} </td>
-        </ng-container>
+      <ng-container matColumnDef="paidAmount">
+        <th mat-header-cell *matHeaderCellDef>Amount Paid </th>
+        <td mat-cell *matCellDef="let element"> {{element.paidAmount}} </td>
+      </ng-container>
       
-        <!-- Weight Column -->
-        <!-- <ng-container matColumnDef="paymentMethod">
-          <th mat-header-cell *matHeaderCellDef> Payment Method </th>
-          <td mat-cell *matCellDef="let element"> {{element.paymentMethod}} </td>
-        </ng-container> -->
-      
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="serial">
-          <th mat-header-cell *matHeaderCellDef>Serial </th>
-          <td mat-cell *matCellDef="let element;let i=index;"> {{i+1}} </td>
-        </ng-container>
         
         <ng-container matColumnDef="assessmentYear">
           <th mat-header-cell *matHeaderCellDef> Assessment Year </th>
@@ -41,15 +36,15 @@
         </ng-container>
     
 
-        <ng-container matColumnDef="agentTin">
-        <th mat-header-cell *matHeaderCellDef>Resource Center TIN</th>
-        <td mat-cell *matCellDef="let element"> {{element.agentTin}} </td>
+        <ng-container matColumnDef="itpTin">
+          <th mat-header-cell *matHeaderCellDef>ITP TIN</th>
+          <td mat-cell *matCellDef="let element"> {{element.itpTin}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="representativeId">
-            <th mat-header-cell *matHeaderCellDef>TRP TIN</th>
-            <td mat-cell *matCellDef="let element"> {{element.representativeTin}} </td>
-            </ng-container>
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef>Submission time</th>
+          <td mat-cell *matCellDef="let element"> {{element.created_at | date}} </td>
+        </ng-container>
     
       
       
