--- a/src/app/ledger/representative-ledger/representative-ledger.component.html
+++ b/src/app/ledger/representative-ledger/representative-ledger.component.html
@@ -21,17 +21,16 @@
           <th mat-header-cell *matHeaderCellDef> TIN </th>
           <td mat-cell *matCellDef="let element"> {{element.taxpayerId}} </td>
         </ng-container>
+
+        <ng-container matColumnDef="taxpayerName">
+          <th mat-header-cell *matHeaderCellDef> Taxpayer Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.taxpayerName}} </td>
+        </ng-container>
       
         <!-- Name Column -->
         <ng-container matColumnDef="paidAmount">
           <th mat-header-cell *matHeaderCellDef>Amount Paid </th>
           <td mat-cell *matCellDef="let element"> {{element.paidAmount}} </td>
-        </ng-container>
-      
-        <!-- Weight Column -->
-        <ng-container matColumnDef="paymentMethod">
-          <th mat-header-cell *matHeaderCellDef> Payment Method </th>
-          <td mat-cell *matCellDef="let element"> {{element.paymentMethod}} </td>
         </ng-container>
       
         <!-- Symbol Column -->
@@ -40,16 +39,10 @@
           <td mat-cell *matCellDef="let element"> {{element.assessmentYear}} </td>
         </ng-container>
     
-
-        <ng-container matColumnDef="agentTin">
-        <th mat-header-cell *matHeaderCellDef>Resource Center TIN</th>
-        <td mat-cell *matCellDef="let element"> {{element.agentTin}} </td>
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef>Submission time</th>
+          <td mat-cell *matCellDef="let element"> {{element.created_at | date}} </td>
         </ng-container>
-
-        <ng-container matColumnDef="representativeTin">
-            <th mat-header-cell *matHeaderCellDef>Representative TIN</th>
-            <td mat-cell *matCellDef="let element"> {{element.representativeTin}} </td>
-            </ng-container>
     
       
       
