--- a/src/app/report/report-admin/report-admin.component.html
+++ b/src/app/report/report-admin/report-admin.component.html
@@ -9,11 +9,9 @@
                 <mat-label>Select Report Type</mat-label>
                     <mat-select matNativeControl required formControlName="type" (selectionChange)="reportType($event.value)">
                         <mat-option value="">--Select--</mat-option>
-                        <mat-option  [value]="1">Resource Center</mat-option>   
-                        <mat-option  [value]="2">TRP</mat-option>   
-                        <mat-option  [value]="3">Ledgers</mat-option>   
-                        <mat-option  [value]="4">Commission</mat-option>   
-                        <mat-option  [value]="5">Bill</mat-option>   
+                        <mat-option  [value]="1">ITP</mat-option>   
+                        <mat-option  [value]="2">Ledgers</mat-option>   
+                        <mat-option  [value]="3">Log</mat-option>   
                     </mat-select>
                 </mat-form-field>
             </td>
@@ -29,15 +27,15 @@
                 </mat-form-field>
                 
             </td>
-            <td *ngIf = "showThirdA">
+            <!-- <td *ngIf = "showThirdA">
                 <mat-form-field class="example-full-width">
                     <mat-label>Enter Resource Center TIN</mat-label>
                     <input matInput  formControlName="agusername" type="number"  placeholder="Username" maxlength="12">
                 </mat-form-field>
-            </td>
+            </td> -->
             <td *ngIf = "showThirdR">
                 <mat-form-field class="example-full-width">
-                    <mat-label>Enter TRP TIN</mat-label>
+                    <mat-label>Enter ITP TIN</mat-label>
                     <input matInput  formControlName="repusername" type="number"  placeholder="Username" maxlength="12">
                 </mat-form-field>
             </td>
@@ -80,14 +78,13 @@
     </table>
   
 </form>
-<h3 class="caption" *ngIf="firstOption=='1' && secondOption=='1'&&showCaption==true">All Resource Center</h3>
-<h3 class="caption" *ngIf="firstOption=='1'&& secondOption=='2'&&showCaption==true">List of TRP of Resource Center</h3>
-<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='1'&&showCaption==true">List of TRPs</h3>
-<h3 class="caption" *ngIf="firstOption=='3'&& secondOption=='1'&&showCaption==true">List of Ledgers</h3>
-<h3 class="caption" *ngIf="firstOption=='3'&& secondOption=='2'&&showCaption==true">List of Ledgers of Resource Center</h3>
-<h3 class="caption" *ngIf="firstOption=='3'&& secondOption=='3'&&showCaption==true">List of Ledgers of TRP</h3>
-<h3 class="caption" *ngIf="firstOption=='3'&& secondOption=='4'&&showCaption==true">List of Ledgers</h3>
-<h3 class="caption" *ngIf="firstOption=='4'&& secondOption=='1'&&showCaption==true">List of All Commissions</h3>
+<h3 class="caption" *ngIf="firstOption=='1' && secondOption=='1'&&showCaption==true">All ITPs</h3>
+<h3 class="caption" *ngIf="firstOption=='1'&& secondOption=='2'&&showCaption==true">All suspended ITP</h3>
+<h3 class="caption" *ngIf="firstOption=='1'&& secondOption=='3'&&showCaption==true">All blocked ITP</h3>
+<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='1'&&showCaption==true">List of Ledgers</h3>
+<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='2'&&showCaption==true">List of Ledgers within Range</h3>
+<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='3'&&showCaption==true">List of Ledgers of a ITP</h3>
+<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='4'&&showCaption==true">List of Ledgers of a ITP within range</h3>
 <table mat-table class="example-full-width datatable" cellspacing="0"  [dataSource]="dataArr" class="mat-elevation-z8" *ngIf="loaded" id="dataTable"> 
 
    
