--- a/src/app/report/report-admin/report-admin.component.html
+++ b/src/app/report/report-admin/report-admin.component.html
@@ -85,6 +85,7 @@
 <h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='2'&&showCaption==true">List of Ledgers within Range</h3>
 <h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='3'&&showCaption==true">List of Ledgers of a ITP</h3>
 <h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='4'&&showCaption==true">List of Ledgers of a ITP within range</h3>
+<h3 class="caption" *ngIf="firstOption=='3'&& secondOption=='1'&&showCaption==true">List of Today's Log</h3>
 <table mat-table class="example-full-width datatable" cellspacing="0"  [dataSource]="dataArr" class="mat-elevation-z8" *ngIf="loaded" id="dataTable"> 
 
    
@@ -153,73 +154,22 @@
 
 
       <!--All Commissions containing trp and agent name-->
-      <ng-container matColumnDef="taxpayer_name" *ngIf="(firstOption=='4'&&secondOption=='1')||firstOption=='5'">
-        <th mat-header-cell *matHeaderCellDef> Taxpayer Name</th>
-        <td mat-cell *matCellDef="let element"> {{element.taxpayer_name}} </td>
+
+      <ng-container matColumnDef="event_type" *ngIf="firstOption=='3'">
+        <th mat-header-cell *matHeaderCellDef> Type of Event </th>
+        <td mat-cell *matCellDef="let element"> {{element.event_type}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="taxpayer_id" *ngIf="(firstOption=='4'&&secondOption=='1')|| firstOption=='5'">
-        <th mat-header-cell *matHeaderCellDef> Taxpayer Id</th>
-        <td mat-cell *matCellDef="let element"> {{element.taxpayer_id}} </td>
+      <ng-container matColumnDef="timestamp" *ngIf="firstOption=='3'">
+        <th mat-header-cell *matHeaderCellDef> Time of Event </th>
+        <td mat-cell *matCellDef="let element"> {{element['@timestamp'] |date: 'short'}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="agent_tin" *ngIf="firstOption=='4' &&secondOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>Resource Center Tin</th>
-        <td mat-cell *matCellDef="let element"> {{element.agent_tin}} </td>
+      <ng-container matColumnDef="message" *ngIf="firstOption=='3'">
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let element"> {{element.message}} </td>
       </ng-container>
-      <ng-container matColumnDef="name" *ngIf="firstOption=='4' &&secondOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>Resource Center Name</th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-      <ng-container matColumnDef="agent_commission" *ngIf="firstOption=='4' &&secondOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>Resource Center Commission</th>
-        <td mat-cell *matCellDef="let element"> {{element.agent_commission}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="representative_tin" *ngIf="firstOption=='4' &&secondOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>TRP Tin</th>
-        <td mat-cell *matCellDef="let element"> {{element.representative_tin}} </td>
-      </ng-container>
-      <ng-container matColumnDef="re_name" *ngIf="firstOption=='4' &&secondOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>TRP Name</th>
-        <td mat-cell *matCellDef="let element"> {{element.re_name}} </td>
-      </ng-container>
-      <ng-container matColumnDef="representative_commission" *ngIf="firstOption=='4' &&secondOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>TRP Commission</th>
-        <td mat-cell *matCellDef="let element"> {{element.representative_commission}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="assessment_year" *ngIf="firstOption=='4' &&secondOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>Assmnt Year</th>
-        <td mat-cell *matCellDef="let element"> {{element.assessment_year}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="year_no" *ngIf="firstOption=='4' &&secondOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>Times</th>
-        <td mat-cell *matCellDef="let element"> {{element.year_no}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="payee_type" *ngIf="firstOption=='5'">
-        <th mat-header-cell *matHeaderCellDef>Payee Type</th>
-        <td mat-cell *matCellDef="let element"> {{element.payee_type=="ROLE_AGENT"?"Resource Center":"TRP"}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="payee" *ngIf="firstOption=='5'">
-        <th mat-header-cell *matHeaderCellDef>Payee Username</th>
-        <td mat-cell *matCellDef="let element"> {{element.payee}} </td>
-      </ng-container>
-
-      
-      <ng-container matColumnDef="name" *ngIf="firstOption=='5'">
-        <th mat-header-cell *matHeaderCellDef>Payee Name</th>
-        <td mat-cell *matCellDef="let element"> {{element.first_name+" "+element.last_name}} </td>
-      </ng-container>
-
-       
-      <ng-container matColumnDef="commission" *ngIf="firstOption=='5'">
-        <th mat-header-cell *matHeaderCellDef>Bill</th>
-        <td mat-cell *matCellDef="let element"> {{element.payee_type=="ROLE_AGENT"?element.agent_commission:element.representative_commission}} </td>
-      </ng-container>
+    
 
       
      
